--- a/module1.py/index.html
+++ b/module1.py/index.html
@@ -15,10 +15,11 @@
 		<h2>Waarom ik deze opleiding zo leuk vind:</h2>
 		<ul>
 			<li>Programmeren</li>
-			<li>Programmeren</li>
-			<li>Programmeren</li>
+			<li>Computers intresse</li>
+			<li>Toekomst</li>
 		</ul>
-		<p>Alles wat ik heb geprogrammerd de afgelopen, staat allemaal in mijn GitHub. Ik zou zeggen neem een kijken op mijn GitHub. <a href="https://github.com/imadama">Visit Imad's GitHub</a></p>
+		<p>Alles wat ik heb geprogrammerd de afgelopen, staat allemaal in mijn GitHub. Ik zou zeggen neem een kijken op mijn GitHub. 
+			<a href="https://github.com/imadama">Visit Imad's GitHub</a></p>
 		<h2>This is me</h2>
 		<img src="images/fotoimi.jpg" alt="Girl in a jacket" width="500" height="600">
 	</body>
