--- a/module1.py/index.html
+++ b/module1.py/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<h1>Welkom bij Imad!</h1>	
 		<h2>Wie ben ik?</h2>
-			<p>Hai, ik ben Imad en ik ben 19 jaar oud. Ben woonachtig in Gorinchem. Het is een stad in midden van Nederland. </p>
+			<p>Ik ben Imad en ik ben geboren en getogen in Gorinchem. Zelf kom ik uit een gezien van vijf kinderen, waarvan ik de oudste ben. Als bijbaan werk ik bij de Lidl in Gorinchem. Toen ik 16 jaar was had ik gelijk gesolliciteerd bij de Lidl, omdat ik toen erg graag wou werken, ervaring opbouwen en natuurlijk om geld te verdienen.</p>
 		<h2>Waarom ik deze opleiding zo leuk vind:</h2>
 		<ul>
 			<li>Programmeren</li>
