--- a/random.html
+++ b/random.html
@@ -11,17 +11,17 @@
 	<body>
 		<h1> Imad Amazyan </h1>
 
-		<ul>	
+		<nav>	
 			<li><a href= "eigenschappen.html"> Eigenschappen </a> </li>
 			<li><a href= "hobby.html"> Hobbies </a> </li>
 			<li><a href= "opleiding.html"> Opleiding </a> </li>
 			<li><a href= "https://github.com/imadama"> GitHub </a></li>
-		</ul>
+		</nav>
 		
 
 		<h2> INTRODUCTIE </h2>
 		
-		<img src= "images/fotoimi.jpg" alt="pic of my-self"  width="200" height="290"> </img>
+		<img src="image/my-self.jfif" alt="pic of my-self"  width="200" height="290">
 		<p> Hallo, ik ben Imad. Ik ben 19 jaar en ik woon in Gorinchem.</p>
 		<p> Ik doe MBO 4 in Davinci College in Gorinchem en ik doe de opleiding software developer. </p>
 		
