--- a/module1.py/index.html
+++ b/module1.py/index.html
@@ -5,21 +5,23 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>persoonlijke website</title>
-		<link rel="stylesheet" href="css/styles-web.css">
+		<link rel="stylesheet" href="stijl.css">
 	</head>
 
-	<body>
-		<h1> Imad Amazyan </h1>
-
+	<body style="background-color:powderblue;">
+		
+		<div>
+		<h1 style="color:cornflowerblue;"> Imad Amazyan </h1>
+		</div>
+		
 		<ul>	
 			<li><a href= "eigenschappen.html"> Eigenschappen </a> </li>
 			<li><a href= "hobby.html"> Hobbies </a> </li>
 			<li><a href= "opleiding.html"> Opleiding </a> </li>
 			<li><a href= "https://github.com/imadama"> GitHub </a></li>
 		</ul>
-		
 
-		<h2> INTRODUCTIE </h2>
+		<h2 style="color:cyan;"> INTRODUCTIE </h2>
 		
 		<img src= "images/fotoimi.jpg" alt="pic of my-self"  width="200" height="290"> </img>
 		<p> Hallo, ik ben Imad. Ik ben 19 jaar en ik woon in Gorinchem.</p>
