--- a/module1.py/index.html
+++ b/module1.py/index.html
@@ -23,7 +23,7 @@
 
 		<h2 style="color:cyan;"> INTRODUCTIE </h2>
 		
-		<img src= "images/fotoimi.jpg" alt="pic of my-self"  width="200" height="290"> </img>
+		<img src= "images/fotoimi.jpg" alt="pic of my-self"  width="200" height="290">
 		<p> Hallo, ik ben Imad. Ik ben 19 jaar en ik woon in Gorinchem.</p>
 		<p> Ik doe MBO 4 in Davinci College in Gorinchem en ik doe de opleiding software developer. </p>
 		
