--- a/meesterproef/index.html
+++ b/meesterproef/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 
 <head>
   <meta charset="UTF-8">
@@ -63,12 +63,12 @@
       </div>
       <div class="service-bottom">
         <div class="service-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
+          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" alt="icon-tandwielen" /></div>
           <h2>Hobby's</h2>
           <p>Naast mijn werk hou ik ervan om te reizen, sporten en nieuwe dingen ontdekken. Ik vind het belangrijk om een evenwicht te vinden tussen werk en ontspanning. Ik probeer altijd het beste uit elke ervaring te halen.</p>
         </div>
         <div class="service-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
+          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" alt="icon-tandwielen" /></div>
           <h2>Werkervaring</h2>
           <p>Mijn werkervaring omvat 5 jaar bij Lidl Nederland. 
             Ik was als eerst begonnen als hulpkracht en na 2 jaar had ik de mogelijkheid om door te groeien naar assistent supermarkt manager, waardoor ik een breed scala aan vaardigheden heb ontwikkeld. 
@@ -76,14 +76,14 @@
             Ik geloof in het leveren van kwaliteitswerk en het constant verbeteren van mijn vaardigheden, en ik kijk uit naar de kans om mijn ervaring en expertise te blijven delen met anderen.</p>
         </div>
         <div class="service-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
+          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" alt="icon-tandwielen" /></div>
           <h2>Opleiding</h2>
           <p>Ik ben een student als software developer aan Davinci College in Gorinchem. 
             Tijdens mijn opleiding ben ik bezig de nodige kennis en vaardigheden op te doen om effectieve en efficiënte software te ontwikkelen. 
             Ik ben geïnteresseerd in het blijven leren en groeien in deze branche en kijk uit naar de kans om mijn opleiding toe te passen in toekomstige projecten.</p>
         </div>
         <!-- <div class="service-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
+          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" alt="icon-tandwielen" /></div>
           <h2>???</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
             architecto placeat beatae tenetur officia quod</p>
@@ -109,7 +109,7 @@
               Na een maand begon ik met mijn eerste project, waarbij ik een tekstgebaseerd spel moest maken genaamd "Guess Capital game". Hier heb ik een kleine game ontwikkeld. Vervolgens kreeg ik grote opdrachten, waarbij ik alles van een while-loop tot functies moest gebruiken. Zo heb ik een rekenmachine, een loodjesverdeler, een bestelsysteem voor een ijssalon en het spel Lingo gemaakt met Python.  </p>
           </div>
           <div class="project-img">
-            <img src="./img/Scherm­afbeelding 2023-03-07 om 11.08.21.png" alt="img">
+            <img src="./img/screenshot-guess-capital.png" alt="screenshot van mijn eerste game">
           </div>
         </div>
         <div class="project-item">
@@ -119,7 +119,7 @@
             <p>Tijdens mijn werk met HTML en CSS heb ik veel geleerd over webdesign en ontwikkeling. Ik ben bekend geworden met de verschillende HTML-tags en CSS-technieken, het implementeren van responsieve ontwerpen en het optimaliseren van de gebruikerservaring. Ik hou ervan om websites visueel aantrekkelijk. Als eindopdracht(meester proef) voor HTML/Css moest ik een portfolio maken. Hierbij mijn Portfolio. </p>
           </div>
           <div class="project-img">
-            <img src="./img/Scherm­afbeelding 2023-03-07 om 11.19.09.png" alt="img">
+            <img src="./img/screenshot-code-portfolio.png" alt="screenshot van de code portfolio">
           </div>
         </div>
         <div class="project-item">
@@ -168,7 +168,7 @@
     <div class="about container">
       <div class="col-left">
         <div class="about-img">
-          <img src="./img/20220215_142254 (2).jpg" alt="img">
+          <img src="./img/foto-me.jpg" alt="foto van mij">
         </div>
       </div>
       <div class="col-right">
@@ -178,7 +178,7 @@
           Ik hou ervan uitdagingen aan te gaan en nieuwe dingen te leren. Ik ben altijd op zoek naar manieren om mezelf te verbeteren en te groeien, zowel op professioneel als op persoonlijk vlak. 
           Ik streef ernaar kwaliteitswerk te leveren en de verwachtingen van mijn klanten te overtreffen. 
           Ik ben een teamspeler en heb een hands-on mentaliteit. Ik kijk uit naar de kans om samen te werken met andere enthousiaste professionals en om bij te dragen aan het succes van een organisatie.</p>
-        <a href="#" class="cta">Download Resume</a>
+        <a href="./cv portfolio.pdf" class="cta">Download Resume</a>
       </div>
     </div>
   </section>
@@ -192,14 +192,14 @@
       </div>
       <div class="contact-items">
         <div class="contact-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/phone.png" /></div>
+          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/phone.png" alt="icon telefoon" /></div>
           <div class="contact-info">
             <h1>Phone</h1>
             <h2>+31 6 85023112</h2>
           </div>
         </div>
         <div class="contact-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png" /></div>
+          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png" alt="icon brief/mail" /></div>
           <div class="contact-info">
             <h1>Email</h1>
             <h2>imadamazyan@gmail.com</h2>
@@ -207,7 +207,7 @@
           </div>
         </div>
         <div class="contact-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png" /></div>
+          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png" alt="icon locatie ping"/></div>
           <div class="contact-info">
             <h1>Address</h1>
             <h2>Gorinchem, Netherlands</h2>
@@ -227,10 +227,10 @@
       <h2>Your Complete Web Solution</h2>
       <div class="social-icon">
         <div class="social-item">
-          <a href="https://github.com/imadama"><img src="./img/icons8-github-60.png" /></a>
+          <a href="https://github.com/imadama"><img src="./img/icons8-github-60.png" alt="incon github" /></a>
         </div>
         <div class="social-item">
-          <a href="https://www.linkedin.com/in/imad-amazyan/"><img src="./img/icons8-linkedin-60.png" /></a>
+          <a href="https://www.linkedin.com/in/imad-amazyan/"><img src="./img/icons8-linkedin-60.png" alt="icon linkedin"/></a>
         </div>
       </div>
       <p>Copyright © 2023 Imad. All rights reserved</p>
